--- a/vue3_ts_BMS/package.json
+++ b/vue3_ts_BMS/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "typescript": "~4.8.4",
