--- a/vue3_ts_BMS/package.json
+++ b/vue3_ts_BMS/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
