--- a/vue3_ts_BMS/package.json
+++ b/vue3_ts_BMS/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.0.33",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
