--- a/vue3_ts_BMS/tsconfig.json
+++ b/vue3_ts_BMS/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "auto-imports.d.ts",
+    "components.d.ts"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
+    // "types": ["element-plus/global"] element-plus的全局引入
   },
 
   "references": [
