--- a/my_vue3-ts-cms07/tsconfig.config.json
+++ b/my_vue3-ts-cms07/tsconfig.config.json
@@ -1,3 +1,12 @@
+// {
+//   "extends": "@vue/tsconfig/tsconfig.node.json",
+//   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
+//   "compilerOptions": {
+//     "composite": true,
+//     "types": ["node"]
+//   }
+// }
+
 {
   "extends": "@vue/tsconfig/tsconfig.node.json",
   "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
@@ -6,3 +15,4 @@
     "types": ["node"]
   }
 }
+
