--- a/my_vue3-ts-cms07/package.json
+++ b/my_vue3-ts-cms07/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.2.18",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.23",
+    "sass": "^1.81.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
